boilerplate codes added

--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "cirt.gov.bd official website",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/app.js"
   },
   "author": "Raiyan Ferdous",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.19.2",
+    "winston": "^3.13.1"
+  }
 }
